# repl.email

./: main.py  new_user.html  pyproject.toml  todo.txt
lib/: db.py  mail.py  newmail.py  wrap.py
static/: auth.js  image.js  manifest.json  parser.js  paste.js  request.js  sanitize-html.min.js  styles-dark5111.css  styles-dark623.css  styles-dark631.css  stylesVt8.css  stylesVt81.css  stylesVt811.css  toggle1121.css  webmail2111.css  webmail31.css  webmail3111.css  webmail4.css
templates/: badge.html  base.html  index.html  login.html  redirect.html  settings.html  webmail.html
