[tool.poetry]
name = "replemail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
imapclient = "^2.1.0"
smtp2go = "^2.1.0"
firebase-admin = "^4.3.0"
cryptobaker = "^0.7.1"
flask-cors = "^3.0.8"
Flask-Mobility = "^1.0.0"
Flask-Limiter = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
