[tool.poetry]
name = "replemail"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-cors = "^3.0.8"
flask-limiter = "^1.4"
flask-mobility = "^1.0.0"
imapclient = "^2.1.0"
smtp2go = "^2.1.0"
firebase-admin = "^4.3.0"
CryptoBaker = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
