[tool.poetry]
name = "replemail-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-limiter = "^1.4"
imap-tools = "^0.20.0"
replit = "^2.0.0"
flask-cors = "^3.0.9"
flask = "^1.1.2"
flask-mobility = "^1.0.0"
sendgrid = "^6.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
